update IDEA sbt setting